--- a/requirements.txt
+++ b/requirements.txt
@@ -1,123 +1,106 @@
-﻿aiofiles==24.1.0
+﻿﻿aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
-aiohttp==3.12.7
+aiohttp==3.11.18
 aiosignal==1.3.2
 altair==5.5.0
 annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
 anyio==4.9.0
+arxiv==2.2.0
 asgiref==3.8.1
-asyncio==3.4.3
 attrs==25.3.0
-Authlib==1.3.1
 backoff==2.2.1
 bcrypt==4.3.0
 beautifulsoup4==4.13.4
 blinker==1.9.0
 build==1.2.2.post1
-CacheControl==0.14.3
 cachetools==5.5.2
-certifi==2025.4.26
+certifi==2024.12.14
 cffi==1.17.1
 chardet==5.2.0
-charset-normalizer==3.4.2
-chromadb==1.0.12
-cleo==2.1.0
-click==8.2.1
+charset-normalizer==3.4.1
+chromadb==1.0.10
+click==8.1.8
 colorama==0.4.6
 coloredlogs==15.0.1
-crashtest==0.4.1
-cryptography==45.0.3
+contourpy==1.3.1
+cryptography==44.0.3
+cycler==0.12.1
 dataclasses-json==0.6.7
-defusedxml==0.7.1
 Deprecated==1.2.18
-deprecation==2.1.0
-distlib==0.3.9
 distro==1.9.0
-dulwich==0.22.8
 durationpy==0.10
+effdet==0.4.1
 emoji==2.14.1
-et_xmlfile==2.0.0
+eval_type_backport==0.2.2
 faiss-cpu==1.11.0
-fastjsonschema==2.21.1
+fastapi==0.115.9
+feedparser==6.0.11
 filelock==3.18.0
 filetype==1.2.0
-findpython==0.6.3
 flatbuffers==25.2.10
+fonttools==4.55.0
 frozenlist==1.6.0
-fsspec==2025.5.1
+fsspec==2025.3.2
 gitdb==4.0.12
 GitPython==3.1.44
-google-auth==2.40.2
+google-api-core==2.24.2
+google-auth==2.40.1
+google-cloud-vision==3.10.1
 googleapis-common-protos==1.70.0
-greenlet==3.2.2
-gritql==0.2.0
-grpcio==1.67.1
-grpcio-health-checking==1.72.1
-grpcio-tools==1.72.1
+greenlet==3.2.1
+grpcio==1.71.0
+grpcio-status==1.71.0
 h11==0.16.0
-h2==4.2.0
-hf-xet==1.1.3
-hpack==4.1.0
 html5lib==1.1
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.0
-huggingface-hub==0.32.4
+huggingface-hub==0.31.1
 humanfriendly==10.0
-hyperframe==6.1.0
 idna==3.10
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
-installer==0.7.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
 Jinja2==3.1.6
-jiter==0.10.0
-joblib==1.5.1
+jiter==0.9.0
+joblib==1.5.0
 jsonpatch==1.33
 jsonpointer==3.0.0
-jsonschema==4.24.0
+jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
-keyring==25.6.0
+kiwisolver==1.4.7
 kubernetes==32.0.1
 langchain==0.3.25
-langchain-chroma==0.2.4
-langchain-cli==0.0.36
-langchain-community==0.3.24
-langchain-core==0.3.65
-langchain-experimental==0.3.4
-langchain-huggingface==0.3.0
-langchain-openai==0.3.19
-langchain-qdrant==0.2.0
+langchain-community==0.3.23
+langchain-core==0.3.59
+langchain-openai==0.3.16
 langchain-text-splitters==0.3.8
-langchain-weaviate==0.0.5
 langdetect==1.0.9
-langserve==0.3.1
-langsmith==0.3.45
+langsmith==0.3.42
+lark==1.2.2
 lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
+matplotlib==3.9.2
 mdurl==0.1.2
 mmh3==5.1.0
-more-itertools==10.7.0
 mpmath==1.3.0
-msgpack==1.1.0
-multidict==6.4.4
+multidict==6.4.3
 mypy_extensions==1.1.0
-narwhals==1.41.0
+narwhals==1.39.0
 nest-asyncio==1.6.0
-networkx==3.5
+networkx==3.4.2
 nltk==3.9.1
-numpy==2.2.6
+numpy==1.26.4
 oauthlib==3.2.2
 olefile==0.47
-onnxruntime==1.22.0
-openai==1.84.0
-opencv-python==4.11.0.86
-openpyxl==3.1.5
+omegaconf==2.3.0
+onnx==1.17.0
+onnxruntime==1.21.1
+openai==1.78.0
+opencv-python==4.10.0.84
 opentelemetry-api==1.33.1
 opentelemetry-exporter-otlp-proto-common==1.33.1
 opentelemetry-exporter-otlp-proto-grpc==1.33.1
@@ -131,103 +114,89 @@ opentelemetry-util-http==0.54b1
 orjson==3.10.18
 overrides==7.7.0
 packaging==24.2
-pandas==2.3.0
-pbs-installer==2025.5.17
-pillow==11.2.1
-pkginfo==1.12.1.2
-platformdirs==4.3.8
-poetry==2.1.3
-poetry-core==2.1.3
-portalocker==2.10.1
-posthog==4.2.0
+pandas==2.2.3
+pdf2image==1.17.0
+pdfminer.six==20250506
+pi_heif==0.22.0
+pikepdf==9.7.0
+pillow==11.0.0
+posthog==4.0.1
 propcache==0.3.1
-protobuf==6.31.1
+proto-plus==1.26.1
+protobuf==5.29.4
 psutil==7.0.0
 pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pyclipper==1.3.0.post6
+pycocotools==2.0.8
 pycparser==2.22
-pydantic==2.11.5
+pydantic==2.11.4
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 pydeck==0.9.1
 Pygments==2.19.1
-pymilvus==2.5.10
-pypdf==5.6.0
+pyparsing==3.2.0
+pypdf==5.4.0
+pypdfium2==4.30.1
 PyPika==0.48.9
-pyproject-toml==0.0.10
 pyproject_hooks==1.2.0
 pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
-python-docx==1.1.2
 python-dotenv==1.1.0
 python-iso639==2025.2.18
 python-magic==0.4.27
+python-multipart==0.0.20
 python-oxmsg==0.0.2
 pytz==2025.2
 PyYAML==6.0.2
-qdrant-client==1.14.2
 RapidFuzz==3.13.0
-rapidocr-onnxruntime==1.4.4
-redis==6.2.0
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==14.0.0
-rpds-py==0.25.1
+rpds-py==0.24.0
 rsa==4.9.1
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.3
 sentence-transformers==4.1.0
-setuptools==80.9.0
-shapely==2.1.1
+setuptools==80.3.1
+sgmllib3k==1.0.0
 shellingham==1.5.4
-simsimd==6.4.7
-six==1.17.0
+six==1.16.0
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.7
-SQLAlchemy==2.0.41
-sse-starlette==1.8.2
-starlette==0.46.2
+SQLAlchemy==2.0.40
+starlette==0.45.3
 streamlit==1.45.1
 sympy==1.14.0
-tenacity==8.5.0
+tenacity==9.1.2
 threadpoolctl==3.6.0
 tiktoken==0.9.0
+timm==1.0.15
 tokenizers==0.21.1
-toml==0.10.2
-tomlkit==0.13.2
-torch==2.7.1
-tornado==6.5.1
 tqdm==4.67.1
-transformers==4.52.4
-trove-classifiers==2025.5.9.12
-typer==0.16.0
+transformers==4.51.3
+typer==0.15.4
 typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.14.0
+typing-inspection==0.4.0
+typing_extensions==4.13.2
 tzdata==2025.2
-ujson==5.10.0
 unstructured==0.17.2
-unstructured-client==0.36.0
-urllib3==2.4.0
-uvicorn==0.23.2
-validators==0.34.0
-virtualenv==20.31.2
+unstructured-client==0.34.0
+unstructured-inference==0.8.10
+unstructured.pytesseract==0.3.15
+urllib3==2.3.0
+uvicorn==0.34.2
 watchdog==6.0.0
 watchfiles==1.0.5
-weaviate-client==4.15.0
 webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
-wheel==0.45.1
-wikipedia==1.4.0
 wrapt==1.17.2
 yarl==1.20.0
-zipp==3.22.0
+zipp==3.21.0
 zstandard==0.23.0
